# c2e

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
c-explainer/: Cargo.toml
c-explainer-cli/: Cargo.toml
c-explainer-cli/src/: main.rs
c-explainer-cli/tests/: cli_tests.rs
c-explainer-wasm/: Cargo.toml
c-explainer-wasm/src/: lib.rs
c-explainer/src/: ast.rs  explainer.rs  lib.rs  parser.rs
c-explainer/src/parser/: error.rs
cli/: Cargo.toml
cli/src/: fmt.rs  main.rs
cli/tests/: cli_tests.rs
lib/: Cargo.toml
lib/src/: ast.rs  explainer.rs  lib.rs  parser.rs
lib/src/color/: fmt.rs  mod.rs
lib/src/parser/: error.rs
wasm/: Cargo.toml
wasm/src/: fmt.rs  lib.rs
www/: bun.lockb  index.html  package.json  vite.config.ts
www/src/: main.ts  vite-env.d.ts
