[workspace]
resolver = "3"
members  = ["c-explainer", "c-explainer-cli"]

[workspace.package]
authors      = ["Kian Kasad <kian@kasad.com>"]
description  = "C declaration/type explainer"
repository   = "https://github.com/kdkasad/c-explainer"
license      = "GPL-3.0-or-later"

edition      = "2024"
rust-version = "1.88"

[workspace.dependencies]
chumsky = { version = "0.10.1", default-features = false }
