#
# This program is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either version
# 3 of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with this program. If
# not, see <https://www.gnu.org/licenses/>.
#

[workspace]
members = [
    "c-explainer",
    "c-explainer-cli",
    "c-explainer-wasm",
]
resolver = "3"

[workspace.package]
authors = ["Kian Kasad <kian@kasad.com>"]
description = "C declaration/type explainer"
license = "GPL-3.0-or-later"
repository = "https://github.com/kdkasad/c-explainer"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies.chumsky]
version = "0.10.1"
default-features = false

[workspace.dependencies.pretty_assertions]
version = "1.4.1"
features = ["alloc"]
default-features = false

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = true
