[package]
name = "c-explainer-cli"
version = "0.0.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
c-explainer = { path = "../c-explainer", version = "*" }
chumsky.workspace = true
indoc = "2.0.6"
rustyline = { version = "16.0.0", default-features = false }

[dev-dependencies]
rexpect = "0.6.2"
pretty_assertions.workspace = true
