[package]
name = "c-explainer-wasm"
version = "0.0.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["panic", "wee_alloc"]
panic = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

c-explainer = { path = "../c-explainer", version = "*" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
