[package]
name = "c-explainer"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"

[dependencies]
chumsky.workspace = true
parse-display = { version = "0.10.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
pretty_assertions = { version = "1.4.1", default-features = false, features = ["alloc"] }
