#
# This program is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation, either version
# 3 of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with this program. If
# not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "c-explainer"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"

[dependencies]
chumsky.workspace = true
enumflags2 = "0.7.12"
parse-display = { version = "0.10.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
pretty_assertions.workspace = true
