[package]
name = "c2e-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "c2e"
path = "src/main.rs"

[dependencies]
c2e.workspace = true
chumsky.workspace = true
indoc = "2.0.6"
rustyline = { version = "16.0.0", default-features = false }

[dev-dependencies]
rexpect = "0.6.2"
pretty_assertions.workspace = true
