[package]
name = "c2e-wasm"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4.5", optional = true }

c2e.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
