[package]
name = "c2e-wasm"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
c2e.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
